--- a/index.html
+++ b/index.html
@@ -157,16 +157,16 @@
                         <h4>ENTRE EM CONTATO COMIGO!</h4>
                         <form class="flex" action="">
                             <div class="form-item flex">
+                                <input class="input-text" id="1" type="text" placeholder=" " required>
                                 <label for="1">Digite seu nome</label>
-                                <input id="1" type="text" placeholder=" " required>
                             </div> <!-- form-item -->
                             <div class="form-item flex">
+                                <input class="input-text" id="2" type="text" placeholder=" " required>
                                 <label for="2">Digite seu E-mail</label>
-                                <input id="2" type="text" placeholder=" " required>
                             </div> <!-- form-item -->
                             <div class="form-item flex">
+                                <input class="input-text" id="3" type="text" placeholder=" " required>
                                 <label for="3">Digite o assunto</label>
-                                <input id="3" type="text" placeholder=" " required>
                             </div> <!-- form-item -->
                             <div class="form-item flex">
                                 <textarea name="" id="" placeholder="Mande uma mensagem"></textarea>
