--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <img src="./img/arruda.jpeg" alt="Gustavo Arruda">
                     </div>
                     <div class="texto-apresentacao2">
-                        <p>Olá, sou desenvolvedor de sistemas formado pela Escola Técnica Sequencial. Meu foco
+                        <p>Olá, sou graduando em Análise e Desenvolvimento de Sistemas pela FATEC. Meu foco
                             profissional é o desenvolvimento web, sobretudo o front-end.</p>
                     </div>
                 </div> <!-- apresentacao -->
